blockml/test/errors/12_chart/e205/e205m.model
model: e205m
joins:
- from_view: e205_one
  as: a
